--- a/autorizz/MainWindow.xaml
+++ b/autorizz/MainWindow.xaml
@@ -1,14 +1,16 @@
 ﻿<Window x:Class="autorizz.MainWindow"
-                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="log" Height="450" Width="800">
+        Title="log" Height="276" Width="765"
+        WindowStyle="None"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="197*"/>
-            <ColumnDefinition Width="603*"/>
+            <ColumnDefinition Width="29*"/>
+            <ColumnDefinition Width="371*"/>
         </Grid.ColumnDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="/images/1.png" Stretch="UniformToFill"/>
@@ -18,18 +20,37 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <TextBlock Text="autorization" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="150,0,0,0"/>
-
+        <TextBlock Text="Authorization" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="282,0,0,0"/>
         <StackPanel Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2">
             <TextBlock Text="Username:"/>
             <TextBox x:Name="txtUser" Width="200" Margin="0,5"/>
             <TextBlock Text="Password:" Margin="0,10"/>
             <PasswordBox x:Name="txtPassword" Width="200"/>
             <TextBlock x:Name="txtErrorMessage" Text="" Foreground="Red" Margin="0,10"/>
-            <Button Content="Login" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658"/>
+            <Button Content="Login" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658">
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Background" Value="#462AD8"/>
+                        <Setter Property="Foreground" Value="White"/>
+                        <Setter Property="FontSize" Value="12"/>
+                        <Setter Property="FontFamily" Value="Montserrat"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="15">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#28AEED"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
         </StackPanel>
     </Grid>
-
 </Window>
-
