--- a/autorizz/MainWindow.xaml
+++ b/autorizz/MainWindow.xaml
@@ -4,53 +4,79 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="log" Height="276" Width="765"
+        Title="Log" Height="202" Width="592"
         WindowStyle="None"
         ResizeMode="NoResize">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="29*"/>
-            <ColumnDefinition Width="371*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.Background>
-            <ImageBrush ImageSource="/images/1.png" Stretch="UniformToFill"/>
-        </Grid.Background>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="101*"/>
+            <RowDefinition Height="9*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Authorization" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="282,0,0,0"/>
-        <StackPanel Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2">
-            <TextBlock Text="Username:"/>
-            <TextBox x:Name="txtUser" Width="200" Margin="0,5"/>
-            <TextBlock Text="Password:" Margin="0,10"/>
-            <PasswordBox x:Name="txtPassword" Width="200"/>
-            <TextBlock x:Name="txtErrorMessage" Text="" Foreground="Red" Margin="0,10"/>
-            <Button Content="Login" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658">
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Background" Value="#462AD8"/>
-                        <Setter Property="Foreground" Value="White"/>
-                        <Setter Property="FontSize" Value="12"/>
-                        <Setter Property="FontFamily" Value="Montserrat"/>
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="Button">
-                                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="15">
-                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    </Border>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#28AEED"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
-            </Button>
-        </StackPanel>
+        <Border CornerRadius="15" Margin="29,0,83,29">
+        <Grid Margin="-32,0,-86,-67">
+            <UIElement.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </UIElement.RenderTransform>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="29*"/>
+                <ColumnDefinition Width="371*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.Background>
+                <ImageBrush ImageSource="/images/1.png" Stretch="UniformToFill"/>
+            </Grid.Background>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="Authorization" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="180,0,0,0"/>
+            <StackPanel Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2">
+                <TextBlock Text="Username:" Width="208" />
+                    <TextBox x:Name="txtUser" Width="200" Margin="0,5" BorderBrush="Gray" BorderThickness="1"/>
+                <TextBlock Text="Password:" Width="206"/>
+                <PasswordBox x:Name="txtPassword" Width="200" BorderBrush="Gray" BorderThickness="1"/>
+                <TextBlock x:Name="txtErrorMessage" Text="" Foreground="Red" Margin="0,10"/>
+                <Button Content="Sign In" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658">
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Background" Value="{DynamicResource MaterialDesignPrimary}" />
+                            <Setter Property="Foreground" Value="{DynamicResource MaterialDesignOnPrimary}" />
+                            <Setter Property="FontSize" Value="12" />
+                            <Setter Property="FontFamily" Value="Montserrat" />
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="15">
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="{DynamicResource MaterialDesignPrimaryDark}" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </StackPanel>
+        </Grid>
+    </Border>
     </Grid>
 </Window>
