--- a/autorizz/MainWindow.xaml
+++ b/autorizz/MainWindow.xaml
@@ -37,18 +37,18 @@
                 <ColumnDefinition Width="371*"/>
             </Grid.ColumnDefinitions>
             <Grid.Background>
-                <ImageBrush ImageSource="/images/1.png" Stretch="UniformToFill"/>
+                <ImageBrush ImageSource="/images/5.jpg" Stretch="UniformToFill"/>
             </Grid.Background>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Authorization" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="180,0,0,0"/>
+            <TextBlock Text="Welcome" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="180,0,0,0" Foreground="LightBlue"/>
             <StackPanel Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2">
-                <TextBlock Text="Username:" Width="208" />
+                <TextBlock Text="Login:" Width="208" Foreground="LightBlue" />
                     <TextBox x:Name="txtUser" Width="200" Margin="0,5" BorderBrush="Gray" BorderThickness="1"/>
-                <TextBlock Text="Password:" Width="206"/>
+                <TextBlock Text="Password:" Width="206" Foreground="LightBlue"/>
                 <PasswordBox x:Name="txtPassword" Width="200" BorderBrush="Gray" BorderThickness="1"/>
                 <TextBlock x:Name="txtErrorMessage" Text="" Foreground="Red" Margin="0,10"/>
                 <Button Content="Sign In" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658">
