--- a/autorizz/MainWindow.xaml
+++ b/autorizz/MainWindow.xaml
@@ -23,60 +23,54 @@
             <RowDefinition Height="9*"/>
         </Grid.RowDefinitions>
         <Border CornerRadius="15" Margin="29,0,83,29">
-        <Grid Margin="-32,0,-86,-67">
-            <UIElement.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </UIElement.RenderTransform>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="29*"/>
-                <ColumnDefinition Width="371*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.Background>
-                <ImageBrush ImageSource="/images/5.jpg" Stretch="UniformToFill"/>
-            </Grid.Background>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <TextBlock Text="Welcome" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="20" Grid.Column="1" Margin="180,0,0,0" Foreground="LightBlue"/>
-            <StackPanel Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2">
-                <TextBlock Text="Login:" Width="208" Foreground="LightBlue" />
-                    <TextBox x:Name="txtUser" Width="200" Margin="0,5" BorderBrush="Gray" BorderThickness="1"/>
-                <TextBlock Text="Password:" Width="206" Foreground="LightBlue"/>
-                <PasswordBox x:Name="txtPassword" Width="200" BorderBrush="Gray" BorderThickness="1"/>
-                <TextBlock x:Name="txtErrorMessage" Text="" Foreground="Red" Margin="0,10"/>
-                <Button Content="Sign In" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658">
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Background" Value="{DynamicResource MaterialDesignPrimary}" />
-                            <Setter Property="Foreground" Value="{DynamicResource MaterialDesignOnPrimary}" />
-                            <Setter Property="FontSize" Value="12" />
-                            <Setter Property="FontFamily" Value="Montserrat" />
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="15">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                        </Border>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                            <Style.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Background" Value="{DynamicResource MaterialDesignPrimaryDark}" />
-                                </Trigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>
-                </Button>
-            </StackPanel>
-        </Grid>
-    </Border>
+            <Grid Margin="-32,0,-86,-67">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="29*"/>
+                    <ColumnDefinition Width="371*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.Background>
+                    <ImageBrush ImageSource="/images/5.jpg" Stretch="UniformToFill"/>
+                </Grid.Background>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Welcome" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Grid.Column="1" Margin="207,10,0,0" Foreground="LightBlue" RenderTransformOrigin="1.087,0.517" Width="98"/>
+                <Border Background="{DynamicResource MaterialDesignPaper}" BorderBrush="Gray" BorderThickness="1" CornerRadius="15" Margin="10,10,371,10" Grid.ColumnSpan="2">
+                    <StackPanel Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2">
+                        <TextBlock Text="Login:" Width="208" Foreground="LightBlue" />
+                        <TextBox x:Name="txtUser" Width="200" Margin="0,5" BorderBrush="Gray" BorderThickness="1"/>
+                        <TextBlock Text="Password:" Width="206" Foreground="LightBlue"/>
+                        <PasswordBox x:Name="txtPassword" Width="200" BorderBrush="Gray" BorderThickness="1"/>
+                        <TextBlock x:Name="txtErrorMessage" Text="" Foreground="Red" Margin="0,10"/>
+                        <Button Content="Sign In" Width="80" Height="30" Click="btnLogin_Click" RenderTransformOrigin="0.506,0.658">
+                            <Button.Style>
+                                <Style TargetType="{x:Type Button}">
+                                    <Setter Property="Background" Value="{DynamicResource MaterialDesignPrimary}" />
+                                    <Setter Property="Foreground" Value="{DynamicResource MaterialDesignOnPrimary}" />
+                                    <Setter Property="FontSize" Value="12" />
+                                    <Setter Property="FontFamily" Value="Montserrat" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type Button}">
+                                                <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="15">
+                                                    <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                    <Style.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{DynamicResource MaterialDesignPrimaryDark}" />
+                                        </Trigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                        </Button>
+                    </StackPanel>
+                </Border>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
