--- a/WPF-LoginForm/Views/LoginView.xaml
+++ b/WPF-LoginForm/Views/LoginView.xaml
@@ -57,7 +57,7 @@
                         <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
 
-                    <ToggleButton x:Name="toggleDarkTheme" Content="Тёмная тема" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="toggleDarkTheme_Checked"/>
+                    <ToggleButton x:Name="toggleDarkTheme" Content="сменить тему" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="toggleDarkTheme_Checked" Margin="10,0,0,0"/>
                     <Button x:Name="btnMinimize"
                             BorderThickness="0"
                             Foreground="White"
