--- a/WPF-LoginForm/Views/LoginView.xaml
+++ b/WPF-LoginForm/Views/LoginView.xaml
@@ -56,7 +56,6 @@
                         <ColumnDefinition Width="25"/>
                         <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
-                    <ToggleButton x:Name="toggleDarkTheme" Content="сменить тему" HorizontalAlignment="Left" VerticalAlignment="Center" Checked="toggleDarkTheme_Checked" Margin="10,0,0,0"/>
                     <Button x:Name="btnMinimize"
                             BorderThickness="0"
                             Foreground="White"
@@ -151,6 +150,7 @@
                             <ImageBrush ImageSource="/Images/user.png"
                                         Stretch="Uniform"
                                         AlignmentX="Left"/>
+
                         </TextBox.Background>
                     </TextBox>
 
@@ -163,7 +163,15 @@
 
                     <customcontrols:BindablePasswordBox Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                         Height="28"
-                                                        Margin="0,5,0,0">
+                                                        Margin="0,5,0,0" RenderTransformOrigin="0.5,0.5">
+                        <customcontrols:BindablePasswordBox.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform Angle="-0.117"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </customcontrols:BindablePasswordBox.RenderTransform>
                     </customcontrols:BindablePasswordBox>
 
                     <TextBlock Text="{Binding ErrorMessage}"
@@ -182,7 +190,7 @@
                             FontSize="12"
                             FontFamily="Montserrat"
                             Cursor="Hand"
-                            Margin="0,30,0,0">
+                            Margin="0,30,0,0" Click="btnLogin_Click">
 
                         <Button.Style>
                             <Style TargetType="Button">
