--- a/WPF-LoginForm/Views/LoginView.xaml
+++ b/WPF-LoginForm/Views/LoginView.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModel="clr-namespace:WPF_LoginForm.ViewModels"
-        xmlns:customcontrols="clr-namespace:WPF_LoginForm.CustomControls"
         mc:Ignorable="d"
         Title="LoginView" Height="550" Width="800"
         WindowStyle="None"
@@ -97,7 +96,6 @@
                             Cursor="Hand"
                             Grid.Column="2"
                             Click="btnClose_Click">
-
                         <Button.Style>
                             <Style TargetType="Button">
                                 <Setter Property="Background" Value="Red"/>
@@ -124,7 +122,7 @@
                     </Button>
                 </Grid>
 
-                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="54,35,63,0">
+                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="54,35,63,0" Visibility="{Binding FirstStackPanelVisibility}">
                     <TextBlock Text="Username"
                                Foreground="DarkGray"
                                FontSize="12"
@@ -150,7 +148,6 @@
                             <ImageBrush ImageSource="/Images/user.png"
                                         Stretch="Uniform"
                                         AlignmentX="Left"/>
-
                         </TextBox.Background>
                     </TextBox>
 
@@ -161,18 +158,27 @@
                                FontFamily="Montserrat"
                                Margin="0,15,0,0"/>
 
-                    <customcontrols:BindablePasswordBox Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                                        Height="28"
-                                                        Margin="0,5,0,0" RenderTransformOrigin="0.5,0.5">
-                        <customcontrols:BindablePasswordBox.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform/>
-                                <SkewTransform/>
-                                <RotateTransform Angle="-0.117"/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </customcontrols:BindablePasswordBox.RenderTransform>
-                    </customcontrols:BindablePasswordBox>
+
+                    <TextBox x:Name="Password"
+                         Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"
+                         FontSize="13"
+                         FontWeight="Medium"
+                         FontFamily="Montserrat"
+                         Foreground="White"
+                         CaretBrush="LightGray"
+                         BorderBrush="DarkGray"
+                         BorderThickness="0,0,0,2"
+                         Height="28"
+                         VerticalContentAlignment="Center"
+                         Margin="0,5,0,0"
+                         Padding="20,0,0,0" Width="238">
+
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/key.png"
+                    Stretch="Uniform"
+                    AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
 
                     <TextBlock Text="{Binding ErrorMessage}"
                                Foreground="#D7596D"
@@ -216,7 +222,156 @@
                     </Button>
 
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,0">
-                        <TextBlock Text="Sign Up"
+                        <Button Content="Sign Up"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding SwapVisabilityCommand}"
+                                   Foreground="White"
+                                   FontSize="12"
+                                   FontWeight="Medium"
+                                   FontFamily="Montserrat"
+                                   Cursor="Hand"
+                                   Margin="8,0,0,0"/>
+                    </StackPanel>
+                </StackPanel>
+
+
+
+                <StackPanel Grid.Row="1" Orientation="Vertical" Margin="54,35,63,0" Visibility="{Binding SecondStackPanelVisibility}">
+                    <TextBlock Text="Username"
+                               Foreground="DarkGray"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               Margin="0,35,0,0"/>
+
+                    <TextBox x:Name="txtregUser"
+                             Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                             FontSize="13"
+                             FontWeight="Medium"
+                             FontFamily="Montserrat"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,2"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,5,0,0"
+                             Padding="20,0,0,0" Width="238">
+
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/user.png"
+                                        Stretch="Uniform"
+                                        AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+
+                    <TextBlock Text="Password"
+                               Foreground="DarkGray"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               Margin="0,15,0,0"/>
+
+
+                    <TextBox x:Name="Firstpassword"
+                         Text="{Binding Firstpassword, UpdateSourceTrigger=PropertyChanged}"
+                         FontSize="13"
+                         FontWeight="Medium"
+                         FontFamily="Montserrat"
+                         Foreground="White"
+                         CaretBrush="LightGray"
+                         BorderBrush="DarkGray"
+                         BorderThickness="0,0,0,2"
+                         Height="28"
+                         VerticalContentAlignment="Center"
+                         Margin="0,5,0,0"
+                         Padding="20,0,0,0" Width="238">
+
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/key.png"
+                    Stretch="Uniform"
+                    AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+
+
+
+                    <TextBlock Text="Password"
+                      Foreground="DarkGray"
+                      FontSize="12"
+                      FontWeight="Medium"
+                      FontFamily="Montserrat"
+                      Margin="0,15,0,0"/>
+
+
+                    <TextBox x:Name="Secondpassword"
+                        Text="{Binding Lastpassword, UpdateSourceTrigger=PropertyChanged}"
+                        FontSize="13"
+                        FontWeight="Medium"
+                        FontFamily="Montserrat"
+                        Foreground="White"
+                        CaretBrush="LightGray"
+                        BorderBrush="DarkGray"
+                        BorderThickness="0,0,0,2"
+                        Height="28"
+                        VerticalContentAlignment="Center"
+                        Margin="0,5,0,0"
+                        Padding="20,0,0,0" Width="238">
+
+                        <TextBox.Background>
+                            <ImageBrush ImageSource="/Images/key.png"
+           Stretch="Uniform"
+           AlignmentX="Left"/>
+                        </TextBox.Background>
+                    </TextBox>
+                    
+                    <TextBlock Text="{Binding ErrorMessage}"
+                               Foreground="#D7596D"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               FontFamily="Montserrat"
+                               Margin="0,10,0,0"
+                               TextWrapping="Wrap"/>
+
+                    <Button x:Name="btReg"
+                            Command="{Binding RegistrationCommand}"
+                            BorderThickness="0"
+                            Content="Sign In"
+                            Foreground="Black"
+                            FontSize="12"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Margin="0,30,0,0">
+
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="LightSkyBlue"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#28AEED"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="150" Height="40"
+                                        CornerRadius="20"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,0">
+                        <Button Content="Sign Up"
+                                Background="Transparent"
+                                BorderThickness="0"
+                                Command="{Binding SwapVisabilityCommand}"
                                    Foreground="White"
                                    FontSize="12"
                                    FontWeight="Medium"
