--- a/WPF-LoginForm/App.xaml
+++ b/WPF-LoginForm/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:WPF_LoginForm"
              Startup="ApplicationStart">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dark.xaml" />
+                <ResourceDictionary Source="Light.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
