--- a/WPF-LoginForm/Views/MainView.xaml
+++ b/WPF-LoginForm/Views/MainView.xaml
@@ -1,17 +1,19 @@
 ﻿<Window x:Class="WPF_LoginForm.Views.MainView"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF_LoginForm.Views"
-        xmlns:viewModel="clr-namespace:WPF_LoginForm.ViewModels"
         mc:Ignorable="d"
         Title="MainWindowView" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None">
+
 
     <Window.Resources>
+        <ImageBrush x:Key="BackgroundBrush" ImageSource="/WPF-LoginForm;component/Images/1.jpg" Stretch="Fill"/>
+
         <Style TargetType="TabControl">
-            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Padding" Value="0"/>
             <Setter Property="TabStripPlacement" Value="Left"/>
@@ -21,15 +23,9 @@
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="150"/>
-                                <!-- Adjust as needed -->
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-
-                            <!-- Vertical Tab headers -->
-                            <TabPanel Grid.Column="0" Panel.ZIndex="1" IsItemsHost="True" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="150"/>
-                            <!-- Adjust Width as needed -->
-
-                            <!-- Tab content -->
+                            <TabPanel Grid.Column="0" Panel.ZIndex="1" IsItemsHost="True" VerticalAlignment="Stretch" HorizontalAlignment="Left" Width="150" Background="Transparent"/>
                             <Border Grid.Column="1" BorderBrush="Gray" BorderThickness="1">
                                 <ContentPresenter ContentSource="SelectedContent"/>
                             </Border>
@@ -40,26 +36,35 @@
         </Style>
 
         <Style TargetType="TabItem">
+            <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Padding" Value="15,5"/>
+            <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="TabItem">
-                        <Border>
-                            <Grid Height="80">
-                                <!-- Adjust Height as needed -->
-                                <Border x:Name="border" Background="Transparent" Height="60" Width="150">
-                                    <!-- Adjust Width and Height as needed -->
-                                    <ContentPresenter ContentSource="Header" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                </Border>
-                            </Grid>
+                        <Border Name="border" BorderBrush="Gray" BorderThickness="1" Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
+                            <ContentPresenter ContentSource="Header" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <ContentPresenter.Resources>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="Foreground" Value="#04d9ff"/>
+                                    </Style>
+                                </ContentPresenter.Resources>
+                            </ContentPresenter>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsSelected" Value="True">
                                 <Setter Property="Foreground" Value="White"/>
-                                <Setter TargetName="border" Property="Background" Value="#2E2E2E"/>
+                                <Setter TargetName="border" Property="Background" Value="#0080FFFF"/>
                             </Trigger>
-                            <Trigger Property="IsSelected" Value="False">
-                                <Setter Property="Foreground" Value="Gray"/>
-                                <Setter TargetName="border" Property="Background" Value="Transparent"/>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#04d9ff"/>
+                                <Setter TargetName="border" Property="BorderThickness" Value="2"/>
+                                <Setter TargetName="border" Property="Opacity" Value="0.8"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="False">
+                                <Setter TargetName="border" Property="BorderThickness" Value="0"/>
+                                <Setter TargetName="border" Property="Opacity" Value="1"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
@@ -68,26 +73,100 @@
         </Style>
     </Window.Resources>
 
-    <Grid>
-        <TabControl>
-            <TabItem Header="Tab 1">
-                <Grid>
-                    <TextBlock Text="Content for Tab 1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                </Grid>
+    <Grid Style="{DynamicResource DarkTheme}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="137*"/>
+            <ColumnDefinition Width="663*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="392"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Grid.Column="1" Margin="75,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="15*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="13*"/>
+                <RowDefinition Height="0*"/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+            <WrapPanel VerticalAlignment="Top" HorizontalAlignment="Left" Grid.RowSpan="5" Margin="233,14,0,0">
+                <Button x:Name="btnMinimize"
+            BorderThickness="0"
+            Foreground="White"
+            FontSize="16"
+            FontFamily="Montserrat"
+            Cursor="Hand"
+            Click="btnMinimize_Click" Grid.ColumnSpan="2" Margin="286,2,5,2">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#28AEED"/>
+                            <Setter Property="Width" Value="25"/>
+                            <Setter Property="Height" Value="25"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#278BEF"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="25" Height="25"
+                        CornerRadius="0"
+                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                      HorizontalAlignment="Center" Content="-"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+                <Button x:Name="btnClose"
+            BorderThickness="0"
+            Foreground="White"
+            FontSize="12"
+            FontFamily="Montserrat"
+            Cursor="Hand"
+            Grid.Column="2"
+            Click="btnClose_Click">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="Red"/>
+                            <Setter Property="Width" Value="25"/>
+                            <Setter Property="Height" Value="25"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#C62DAE"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="25" Height="25"
+                        CornerRadius="0"
+                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                      HorizontalAlignment="Center" Content="X"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </WrapPanel>
+        </Grid>
+        <TabControl Grid.ColumnSpan="2">
+            <TabItem Header="Главное меню" Margin="3,51,-3,-80">
             </TabItem>
 
-            <TabItem Header="Tab 2">
-                <Grid>
-                    <TextBlock Text="Content for Tab 2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                </Grid>
-            </TabItem>
+            <TabItem Header="База данных" Margin="-2,93,2,-121" MouseDoubleClick="bd_click"/>
 
-            <TabItem Header="Tab 3">
-                <Grid>
-                    <TextBlock Text="Content for Tab 3" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                </Grid>
+            <TabItem Header="Настройки" Margin="-1,130,1,-161" MouseDoubleClick="setting_click">
+                <Grid Margin="575,0,0,0"/>
             </TabItem>
         </TabControl>
+        <Frame NavigationUIVisibility="Hidden" x:Name="MainFrane" Grid.Column="1" Grid.Row="1" Margin="28,0,0,0" />
     </Grid>
 </Window>
-    
