--- a/WPF-LoginForm/App.xaml
+++ b/WPF-LoginForm/App.xaml
@@ -2,12 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF_LoginForm"
-             Startup="ApplicationStart">
+              StartupUri="Views/LoginView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Dark.xaml" />
                 <ResourceDictionary Source="Light.xaml"/>
+                <ResourceDictionary Source="/Views/TextBoxStle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
