--- a/WPF-LoginForm/Views/UserWindows.xaml
+++ b/WPF-LoginForm/Views/UserWindows.xaml
@@ -1,5 +1,5 @@
-﻿<Window x:Class="WPF_LoginForm.Views.MainView"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window x:Class="WPF_LoginForm.Views.UserWindows"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -91,7 +91,7 @@
             FontSize="16"
             FontFamily="Montserrat"
             Cursor="Hand"
-            Click="btnMinimize_Click" Grid.ColumnSpan="2">
+            Click="btnMinimize_Click" Grid.ColumnSpan="2">                                   
                 <Button.Style>
                     <Style TargetType="Button">
                         <Setter Property="Background" Value="#28AEED"/>
@@ -151,18 +151,9 @@
             </Button>
         </WrapPanel>
         <StackPanel Grid.Row="1">
-            <Button Height="50" Background="Transparent" BorderThickness="0" Foreground="AliceBlue" MouseDoubleClick="bd_click">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/Images/10.png" Width="24" Height="24" Margin="0,0,5,0"/>
-                    <TextBlock Text="База данных"/>
-                </StackPanel>
-            </Button>
-            <Button Height="50" Background="Transparent" BorderThickness="0" Foreground="AliceBlue" MouseDoubleClick="setting_click">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="/Images/9.png" Width="24" Height="24" Margin="0,0,5,0"/>
-                    <TextBlock Text="Настройки"/>
-                </StackPanel>
-            </Button>
+            <Button Content="База данных"  Height="50"   Background="Transparent" BorderThickness="0" Foreground="AliceBlue" MouseDoubleClick="bd_click"/>
+
+            <Button Content="Настройки"  Height="50"   Background="Transparent" BorderThickness="0" Foreground="AliceBlue" MouseDoubleClick="setting_click"/>
 
         </StackPanel>
         <Frame NavigationUIVisibility="Hidden" x:Name="MainFrane" Grid.Column="1" Grid.Row="1"  />
